# cpp

./: .gitignore  Makefile  README.md  pyproject.toml  system_map_first_refactor.md
cpp/: __init__.py  cli.py  diagram_validator.py  llm.py  nlp_import.py  parser.py  proxy.py  replay_check.py  run_logger.py
cpp/prompts/: __init__.py  loader.py  map_visualizer_v1.md  upstream_prompt_template.md
docs/: diagram_humility.md  persistent_run_log.md  replay_mode.md  run_log_schema.md  sequence-diagram.md  spec.md  stress_automation.md  stress_test.md  test_results.txt
nlp_diagrammer/: CURSOR_PROMPT.txt  main.py  pyproject.toml
nlp_diagrammer/docs/: diagram_worthiness_heuristics.md  nlp_diagrammer_spec.md  shadow_nlp_logging_spec.md
nlp_diagrammer/nlp_diagrammer/: __init__.py  diagrammer.py  heuristics.py  templates.py  utils.py
nlp_diagrammer/scripts/: run_eval.py
nlp_diagrammer/tests/: test_cases.json
prompts/: explainer_v1.md  upstream_prompt_template.md  visualizer_v1.md
scripts/: run_stress.py
stress/: prompts.json
